[gd_scene load_steps=12 format=3 uid="uid://bflxqrjtbsynx"]

[ext_resource type="Script" path="res://scenes/chest/chest.gd" id="1_2sg4h"]
[ext_resource type="VideoStream" path="res://scenes/chest/chest.ogv" id="2_38n2n"]
[ext_resource type="VideoStream" path="res://scenes/chest/closed_chest.ogv" id="2_h5ndq"]
[ext_resource type="VideoStream" path="res://scenes/chest/chest_closeup.ogv" id="3_2m4pp"]
[ext_resource type="VideoStream" path="res://scenes/chest/opened_chest.ogv" id="4_hyc2l"]
[ext_resource type="PackedScene" uid="uid://cdoq6xtniibw8" path="res://scenes/gui_remaster/gui_remaster.tscn" id="4_xhtv6"]
[ext_resource type="PackedScene" uid="uid://cwr2ewdghvrdv" path="res://scenes/gui_original/gui_original.tscn" id="6_0ppwl"]
[ext_resource type="AudioStream" uid="uid://58hkqctgpsg7" path="res://scenes/chest/old-wood-creaking-building-171122.mp3" id="8_2xxgp"]
[ext_resource type="Texture2D" uid="uid://tbrcak0sik4c" path="res://scenes/chest/coffre.png" id="10_5s2k0"]
[ext_resource type="Texture2D" uid="uid://bafitb3aiunfs" path="res://scenes/chest/money_original.png" id="11_3i5cc"]
[ext_resource type="Texture2D" uid="uid://b0emtdxuq4wht" path="res://scenes/chest/money.png" id="11_bbn6v"]

[node name="chest" type="Node2D"]
script = ExtResource("1_2sg4h")

[node name="Remaster" type="Node2D" parent="."]

[node name="Control" type="Control" parent="Remaster"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 176.0
offset_right = 1744.0
offset_bottom = 824.0

[node name="VideoStreamPlayerChestClosed" type="VideoStreamPlayer" parent="Remaster/Control"]
layout_mode = 0
offset_left = -64.0
offset_right = 1576.0
offset_bottom = 816.0
stream = ExtResource("2_h5ndq")
autoplay = true
expand = true
loop = true

[node name="VideoStreamPlayerChestOpening" type="VideoStreamPlayer" parent="Remaster/Control"]
visible = false
layout_mode = 0
offset_left = -192.0
offset_right = 1448.0
offset_bottom = 816.0
stream = ExtResource("2_38n2n")
expand = true

[node name="VideoStreamPlayerChestOpened" type="VideoStreamPlayer" parent="Remaster/Control"]
visible = false
layout_mode = 0
offset_left = -128.0
offset_right = 1512.0
offset_bottom = 816.0
stream = ExtResource("3_2m4pp")
expand = true

[node name="VideoStreamPlayerChestEmpty" type="VideoStreamPlayer" parent="Remaster/Control"]
visible = false
layout_mode = 0
offset_left = -64.0
offset_right = 1576.0
offset_bottom = 816.0
stream = ExtResource("4_hyc2l")
expand = true

[node name="gui_remaster" parent="Remaster" instance=ExtResource("4_xhtv6")]

[node name="Money" type="Sprite2D" parent="Remaster"]
visible = false
position = Vector2(595, 551)
scale = Vector2(4.12333, 4.12333)
texture = ExtResource("11_bbn6v")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Remaster"]
stream = ExtResource("8_2xxgp")
autoplay = true

[node name="Original" type="Node2D" parent="."]
visible = false

[node name="gui_original" parent="Original" instance=ExtResource("6_0ppwl")]

[node name="Background" type="Sprite2D" parent="Original"]
position = Vector2(943, 475)
scale = Vector2(2.5, 2.6)
texture = ExtResource("10_5s2k0")

[node name="Money" type="Sprite2D" parent="Original"]
visible = false
position = Vector2(1158, 695.6)
scale = Vector2(2.5, 2.6)
texture = ExtResource("11_3i5cc")
